--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
 
 			<aside class="aside">
 
-				<img src="C:\Users\arsene\Pictures\Camera Roll\meddy steed.jpg" class="img">
+				<img src="C:\Users\arsene\Desktop\flexbox vs grid\assets\img\meddy steed.jpg" class="img">
 
 			</aside>
 
 		     <main>
 
                <h2>BONJOUR</h1>
-
-               <h2>presentation</h2>
 
                <p>
 
